# SpatialSobol

./: README.md  pyproject.toml  setup.cfg
marrel_pipeline/: __init__.py  campbell2d.py  coeff_models.py  config.py  design.py  diagnostics.py  frk.py  frk_basis.py  functional_frk_metamodel.py  functional_metamodel.py  pipeline.py  plotting.py  sobol_exact.py  sobol_metamodel.py  wavelet.py
notebooks/: 01_run_pipeline.ipynb  02_run_frk_pipeline.ipynb  03_compare_wavelet_vs_frk.ipynb  results_frk.npz
notebooks/.ipynb_checkpoints/: 01_run_pipeline-checkpoint.ipynb  02_run_frk_pipeline-checkpoint.ipynb  03_compare_wavelet_vs_frk-checkpoint.ipynb
tests/: test_frk_shapes.py  test_rmae_table1.py  test_shapes_and_zero_input.py
