[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marrel-pipeline"
version = "0.1.0"
description = "Reproduction of Marrel et al. (2010) spatial Sobol pipeline on Campbell2D."
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "pywavelets",
  "scikit-learn",
  "pytest",
  "jupyter",
  "nbformat"
  ,"pandas"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
